Bug 147580 - validation error with draw:extrusion-specularity
Summary: validation error with draw:extrusion-specularity
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-21 15:53 UTC by Regina Henschel
Modified: 2022-02-24 18:04 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
file to reproduce the problem (26.50 KB, application/msword)
2022-02-21 15:53 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-02-21 15:53:54 UTC
Created attachment 178442 [details]
file to reproduce the problem

Open attached document and save it to "ODF 1.3" and to "ODF 1.3 (extended)". Validate the file. In both cases you get the validation error
attribute "draw:extrusion-specularity" has a bad value: the value does not match the regular expression "([0-9]?[0-9](\.[0-9]*)?|100(\.0*)?|\.[0-9]+)%".

This is a follow up to bug 145700. That commit keeps values higher than 100% from doc import for better interoperability. But such values are not allowed in ODF. The request for changing ODF is in https://issues.oasis-open.org/browse/OFFICE-4122. In the meantime we need to use loext namespace in "ODF 1.3 (extended)" and restrict the value to the allowed range in "ODF 1.3".
Comment 1 Commit Notification 2022-02-24 10:44:23 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c893c0e359b82be71107e064bd2266c6daff81d7

tdf#147580 use valid values for extrusion-specularity

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.